--- a/style.css
+++ b/style.css
@@ -1,16 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap');
 
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
   font-family: "Poppins", sans-serif;
-}
-body{
-  background:linear-gradient(to bottom,rgb(245, 245, 245),rgba(199, 236, 255, 0.6));
-  /* background:linear-gradient(to bottom,rgb(245, 245, 245),rgba(255, 214, 199, 0.6)); */
-  background-size: cover; 
-  background-repeat: no-repeat; 
-  background-attachment: fixed; 
 }
 html {
   scroll-behavior: smooth;
@@ -18,6 +13,10 @@ html {
 p{
   color: rgb(0, 0, 0);
 }
+section {
+  padding: 20px;
+}
+
 
 .Header {
   display: flex;
@@ -31,11 +30,6 @@ p{
   z-index: 100;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
   background: white;
-}
-.HEAD {
-  font-weight: 40px;
-  font-size: 30px;
-  color: rgb(0, 0, 0);
 }
 .Hamburger {
   font-size: 24px;
@@ -51,14 +45,10 @@ p{
 }
 .Nav ul li:hover {
   cursor: pointer;
-  background-color: rgba(0, 128, 255, 0.5);
-  /* background-color: rgb(255, 102, 0); */
-  color: rgb(0, 128, 255);
 }
 Nav ul li a {
   text-decoration: none;
   color: rgb(45, 45, 45);
-  /* font-size: 1rem; */
 }
 Nav ul li a:hover{
   color: black;
@@ -67,59 +57,82 @@ Nav ul li a:hover{
   color: rgb(0, 153, 255);
 }
 
+
 .Container {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
+  justify-content: space-between;
   padding: 50px;
-  margin-top: 65px;
-  border-radius: 30px;
-  height: 70vh;
-  opacity: 0;
+  margin-top: 125px;
+  height: 80vh;
 }
-.Left2 {
-  animation: slide-in 4s ease forwards;
-  padding: 20px;
-  color: var(--secondary-color);
+.Container p{
+  color: #530000;
+  font-size: 16px;
 }
-.IMG {
-  margin-top: 25px;
-  height: 400px;
-  border: 10px solid rgb(245, 245, 245);
-  border-radius: 4%;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-  animation: slide-in-reverse 4s ease forwards;
+.H1-MAIN{
+  font-family: 'Space Grotesk', sans-serif;
+font-size: 55px;
 }
-.IMG:hover {
-  box-shadow: 0 0 20px rgb(255, 0, 0, 0.5);
+.H1-MAIN span{
+  color: rgb(255, 81, 0);
+  font-family: 'Oswald', sans-serif;
+  letter-spacing: 2px;
 }
-.container.show {
-  opacity: 1;
+.HeadBTN{
+  padding: 12px;
+  background-color: #000000e4;
+}
+.HeadBTN a{
+text-decoration: none;
+color: white;
+}
+.HeadBTN:hover a{
+background-color: rgb(0, 0, 0);
+cursor: pointer;
+color: rgb(0, 191, 255);
+}
+.IMG-BOX{
+  width: 40%;
+  height: 90%;
+  position: absolute;
+  bottom: 0px;
+  right: 10px;
+}
+.IMG-BOX img{
+  height: 100%;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+  transition: 1s;
+}
+.IMG-BOX .Back-IMG{
+  height: 80%;
+}
+.IMG-BOX:hover .Back-IMG{
+  bottom: 40px;
+}
+.IMG-BOX:hover .Main-IMG{
+  left: 54%;
+}
+.LOGOS{
+  margin-top: 100px;
 }
 .LOGO {
-  width: 50px;
+  width: 45px;
   opacity: 0.8;
-  transition: 0.2s;
+  transition: 0.5s;
 }
 .LOGO:hover {
   opacity: 1;
-  width: 52px;
+  transform: translateY(-30%);
 }
-.Left2 h1 b {
-  color: rgb(40, 162, 255);
-}
-section {
-  padding: 20px;
-}
+
 
 .Container2 {
   margin-top: 62px;
   height: 85vh;
-}
-.HEAD {
-  color: rgb(40, 162, 255);
-  cursor: pointer;
 }
 .Paragraph {
   margin-left: 50px;
@@ -128,55 +141,151 @@ section {
   box-sizing: border-box;
   display: inline-block;
 }
+.heading2 {
+  text-align: center;
+  position: relative; 
+  color: rgb(236, 71, 6);
+}
+.heading2::after {
+  content: "";
+  display: block;
+  width: 10%; 
+  height: 3px; 
+  background-color: #000; 
+  position: absolute;
+  bottom: 0;
+  left: 45%; 
+  font-weight: 900;
+  background-image: linear-gradient(to right,rgb(240, 76, 0),rgb(255, 240, 234) );
+}
 
-.Container3 {
-  text-align: center;
-  margin-top: 62px;
-  height: 85vh;
-}
-.Divs {
-  display: flex;
-  justify-content: space-around;
+
+.main {
   width: 100%;
-  margin-top: 30px;
+  height: auto;
+  padding: 50px 0;
+  display: grid;
+  place-items: center;
 }
-.A {
-  height: 35vh;
-  width: 30vw;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  opacity: 0.7;
-  transition: 0.5s;
-  font-size: 12px;
+.main .heading {
+  font-size: 27px;
+  font-weight: 500;
+  color: rgb(236, 71, 6);
+  position: relative;
+  margin-bottom: 80px;
 }
-.A:hover {
-  opacity: 1;
-  cursor: pointer;
-  box-shadow: 0 0 20px rgba(255, 0, 0, 0.5);
+.heading::after{
+    position: absolute;
+    content: '';
+    width: 50%;
+    height: 4px;
+    left: 50%;
+    bottom: -5px;
+    background-image: linear-gradient(to right,rgb(240, 76, 0),rgb(255, 240, 234) );
+    transform: translateX(-50%);
 }
-.EDU:hover {
-  color: rgb(0, 174, 255);
+.container-Edu{
+    width: 70%;
+    height: auto;
+    position: relative;
 }
-.LOGO2 {
-  padding: 10px;
+.container-Edu::after{
+    position: absolute;
+    content: '';
+    width: 2px;
+    height: 100%;
+    background-image: linear-gradient(to right,rgb(240, 76, 0),rgb(255, 240, 234) );
 }
-.BTN {
-  margin-top: 60px;
-  padding: 10px;
-  background-color: rgba(0, 183, 255, 0.6);
-  border: none;
-  cursor: pointer;
-  transition: 1s;
+.container-Edu ul{
+list-style: none;
 }
-.BTN a {
-  text-decoration: none;
-  color: rgb(255, 255, 255);
+.container-Edu ul li{
+width: 50%;
+height: auto;
+padding: 15px 20px;
+background-color: #fff;
+box-shadow: 1px 1px 25px rgba(0, 0, 0, 0.506);
+border-radius: 10px;
+margin-bottom: 30px;
+z-index: 99;
+position: relative;
 }
-.BTN:hover {
-  background-color: rgba(255, 0, 0, 0.608);
+.container-Edu ul li:nth-child(odd){
+    float: left;
+    clear: right;
+    transform: translateX(-30px);
+}
+.container-Edu ul li:nth-child(even){
+    float: right;
+    clear: left;
+    transform: translateX(30px);
+}
+.container-Edu ul li:nth-child(4){
+    margin-bottom: 0;
+}
+.container-Edu ul li .title{
+    font-size: 20px;
+    font-weight: 500;
+    color: rgb(236, 71, 6);
+}
+ul li p{
+    font-size: 15px;
+    color: #444;
+    margin: 7px 0;
+    line-height: 23px;
+}
+ul li a{
+    font-size: 15px;
+    color: rgb(236, 71, 6);
+    text-decoration: none;
+}
+ul li a:hover{
+    color: rgb(0, 140, 255);
+}
+ul li .date{
+    position: absolute;
+    top: -40px;
+    left: 20px;
+    width: 135px;
+    height: 35px;
+    border-radius: 20px;
+    color: #fff;
+    background-image: linear-gradient(to right,rgb(240, 76, 0),rgb(255, 240, 234) );
+    display: grid;
+    place-items: center;
+    font-size: 14px;
+}
+
+@media(max-width:1124px){
+    .container-Edu{
+        width: 85%;
+    }
+}
+@media(max-width:933px){
+    .container-Edu{
+        width: 80%;
+    }
+    .container-Edu ul::after{
+        left: -30px;
+    }
+    .container-Edu ul li{
+        width: 100%;
+        float: none;
+        clear: none;
+        margin-bottom: 80px;
+    }
+    .container-Edu ul li:nth-child(odd){
+        transform: translateX(0);
+        text-align: left;
+
+    }
+    .container-Edu ul li:nth-child(even){
+        transform: translateX(0);
+        
+    }
+    .container-Edu ul li:nth-child(even).date{
+        left: 600px;
+    }
 }
 
 .Container5 {
@@ -226,3 +335,8 @@ section {
   display: inline-block;
   text-align: justify;
 }
+.MP{
+  margin-top: 12px;
+  margin-bottom: 12px;
+}
+
