--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,68 @@
-@media screen and (max-width: 768px) {
-  .Container {
+@media screen and (max-width: 968px) {
+  /* .Container {
     flex-direction: column;
     box-shadow: none;
     height: 70vh;
     padding: 0;
-  }
-  .Left2 p {
+  } */
+  /* .Left2 p {
     font-size: 10px;
     text-align: left;
-  }
-  .IMG {
+  } */
+  /* .IMG {
     margin-top: 0px;
     height: 300px;
+  } */
+  /* For screens smaller than 768px */
+  @media (max-width: 500px) {
+    .Container {
+      flex-direction: column;
+      height: 100vh;
+      padding: 20px;
+      margin-top: 40px;
+    }
+
+    .IMG-BOX {
+      width: 50%;
+      height: 50%;
+      position: absolute;
+      top: 450px;
+      /* top: 0; */
+      right: 100px;
+    }
+
+    .IMG-BOX img {
+      /* position: relative;
+    transform: none;
+    left: auto;
+    bottom: auto;
+    height: auto;
+    max-width: 100%; */
+      height: 100%;
+      position: absolute;
+      /* right: 50%; */
+      /* left: 50%; */
+      /* bottom: 0; */
+      /* transform: translate(-10%); */
+      transition: 1s;
+      /* transition: none; */
+    }
+.LOGOS{
+  margin-top: 0;
+}
   }
+
   .Right1 ul li a {
     font-size: smaller;
     font-weight: bold;
   }
+  .IMG-BOX {
+    flex-direction: column;
+  }
 
   .Container2 {
     padding: 0;
-    margin-top: 25px;
+    margin-top: 50px;
     font-size: 10px;
     box-shadow: none;
     height: 65vh;
@@ -28,12 +70,12 @@
 
   .Container3 {
     padding: 0;
-    margin-top: 140px;
+    margin-top: 50px;
     font-size: 10px;
     box-shadow: none;
     height: 65vh;
   }
-  .HEAD{
+  .HEAD {
     font-size: large;
   }
 
@@ -41,6 +83,7 @@
     flex-direction: column;
     align-items: center;
     font-size: 8px;
+    margin-top: 0;
   }
   .A,
   .B,
@@ -54,97 +97,77 @@
     width: 30px;
   }
   .BTN {
-    margin: 4px;
+    margin: 20px;
     padding: 4px;
     font-size: 10px;
   }
+
   .Container4 {
     padding: 0;
     font-size: 10px;
     font-size: 10px;
   }
+  .skills_main {
+    margin-left: auto;
+  }
   .Paragraph {
-   margin: auto;
+    margin: auto;
   }
 }
-@media(max-width:768px){
-
-  .SubContainer6{
-    justify-content:space-evenly;
+@media (max-width: 768px) {
+  .SubContainer6 {
+    justify-content: space-evenly;
     flex-direction: column;
     align-items: center;
     margin-bottom: 150px;
   }
 }
-@media(max-width:1024px){
-  .MP{
+@media (max-width: 1024px) {
+  .MP {
     margin-top: 67vh;
   }
-  .Sub-Container5{
+  .Sub-Container5 {
     flex-direction: column;
     height: 200vh;
     margin-top: 500px;
   }
-  .Gallery{
+  .Gallery {
     width: 80%;
     grid-auto-rows: 250px;
   }
-  .Box{
+  .Box {
     grid-row: span 1;
     grid-column: span 4;
   }
-  .Box:hover{
+  .Box:hover {
     background-position: 100% 25%;
   }
 }
-@media screen and (max-width: 600px) {
+@media (max-width: 768px) {
   .Hamburger {
     display: block;
   }
-  Nav {
+  .Nav {
     display: none;
-  }
-  Nav.active {
-    display: flex;
     flex-direction: column;
-    /* align-items: center;
-    justify-content: center; */
-    /* color: var(--primary-color); */
     position: absolute;
     top: 60px;
     left: 0;
-    right: 0;
-    /* z-index: 999; */
-
+    background-color: #ffffff;
+    width: 100%;
+    height: 40px;
   }
-
-  ul li:hover {
-    cursor: pointer;
-    background-color: transparent;
-    color: rgb(0, 128, 255);
+  .Nav.active {
+    display: inline-block;
   }
-  Nav ul li .active a {
-    color: rgb(0, 128, 255);
-    margin-right: 0;
-    margin-bottom: 10px;
-
+  .List li {
+    margin: 0;
+    padding: 10px;
+    text-align: center;
   }
-  .Header {
-    opacity: 0.8;
-  }
-  .Header:hover {
-    opacity: 1;
-  }
-  .List{
-    background-color: white;
-    display: flex;
-      /* flex-direction: column; */
-      align-items: center;
-      text-align: center;
-  }
-  .List li a{
-    margin-left: 15px;
-  }
+  /* .Nav ul li:hover{
+ pointer-events: none;
+  } */
 }
 
 .Container4 {
@@ -154,7 +177,7 @@
 .skills_section {
   width: 100%;
   height: 100vh;
-  padding: 0px 13%;
+  /* padding: 0px 13%; */
   background-color: rgba(0, 0, 0, 0.082);
   display: flex;
   align-items: center;
@@ -164,7 +187,7 @@
 
 .skills_main {
   padding: 60px 0;
-  margin-left: 60px;
+  margin-left: 50px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-row-gap: 30px;
@@ -310,4 +333,3 @@
     transform: translateX(0);
   }
 }
-
