--- a/style.css
+++ b/style.css
@@ -67,7 +67,6 @@ Nav ul li a:hover{
   height: 80vh;
 }
 .Container p{
-  color: #530000;
   font-size: 16px;
 }
 .H1-MAIN{
@@ -80,15 +79,19 @@ font-size: 55px;
   letter-spacing: 2px;
 }
 .HeadBTN{
-  padding: 12px;
-  background-color: #000000e4;
+  padding: 10px;
+  background-color: rgba(47, 196, 255, 0.6);
+  border: none;
+  cursor: pointer;
+  transition: .5s;
+
 }
 .HeadBTN a{
 text-decoration: none;
 color: white;
 }
-.HeadBTN:hover a{
-background-color: rgb(0, 0, 0);
+.HeadBTN:hover{
+background-color: rgb(255, 105, 105);
 cursor: pointer;
 color: rgb(0, 191, 255);
 }
@@ -256,36 +259,141 @@ ul li .date{
     font-size: 14px;
 }
 
-@media(max-width:1124px){
-    .container-Edu{
-        width: 85%;
-    }
+.Container4 {
+  margin-top: 62px;
+  height: 85vh;
 }
-@media(max-width:933px){
-    .container-Edu{
-        width: 80%;
-    }
-    .container-Edu ul::after{
-        left: -30px;
-    }
-    .container-Edu ul li{
-        width: 100%;
-        float: none;
-        clear: none;
-        margin-bottom: 80px;
-    }
-    .container-Edu ul li:nth-child(odd){
-        transform: translateX(0);
-        text-align: left;
+.skills_section {
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.082);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.skills_main {
+  padding: 60px 0;
+  margin-left: 50px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-row-gap: 30px;
+  grid-column-gap: 50px;
+}
+.info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 10px;
+  width: 88%;
+}
+.bar {
+  width: 90%;
+  height: 10px;
+  background-color: rgba(0, 0, 0, 0.144);
+  border-radius: 25px;
+  margin-top: 5px;
+  position: relative;
+}
+.skill_bar .bar span {
+  width: 50%;
+  height: 100%;
+  position: absolute;
+  background-image: linear-gradient(to right,rgb(240, 76, 0),rgb(255, 223, 210) );
+  border-radius: 25px;
+}
 
-    }
-    .container-Edu ul li:nth-child(even){
-        transform: translateX(0);
-        
-    }
-    .container-Edu ul li:nth-child(even).date{
-        left: 600px;
-    }
+.skill_bar .bar .html {
+  width: 80%;
+  animation: html 2s;
+}
+@keyframes html {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 80%;
+  }
+}
+.skill_bar .bar .css {
+  width: 75%;
+  animation: css 2s;
+}
+@keyframes css {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 75%;
+  }
+}
+.skill_bar .bar .js {
+  width: 70%;
+  animation: css 2s;
+}
+@keyframes js {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 70%;
+  }
+}
+.skill_bar .bar .cpp {
+  width: 70%;
+  animation: cpp 2s;
+}
+@keyframes cpp {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 70%;
+  }
+}
+.skill_bar .bar .bootstrap {
+  width: 90%;
+  animation: bootstrap 2s;
+}
+@keyframes bootstrap {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 90%;
+  }
+}
+.skill_bar .bar .angular {
+  width: 70%;
+  animation: angular 2s;
+}
+@keyframes angular {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 70%;
+  }
+}
+@keyframes slide-in-reverse {
+  from {
+    opacity: 0;
+    transform: translateX(40px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+@keyframes slide-in {
+  from {
+    opacity: 0;
+    transform: translateX(-40px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
 
 .Container5 {
@@ -338,5 +446,195 @@ ul li .date{
 .MP{
   margin-top: 12px;
   margin-bottom: 12px;
+}
+.Accordian{
+  padding: 16px 16px;
+  margin-bottom: 16px;
+  border-radius: 4px;
+  box-shadow: 1px 1px 5px rgb(0, 0, 0,0.4);
+  cursor: pointer;
+}
+.Question{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: black
+}
+.icon{
+  margin-right: 10px;
+  transition: transform .5s;
+}
+.icon.Active{
+color: orangered;
+  transform: rotate(-180deg);
+}
+.Answer{
+  color: gray;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height .5s;
+}
+.Answer.Active{
+  max-height: 400px;
+}
+.HA{
+color: rgb(236, 71, 6);
+}
+@media(max-width:968px){
+.Answer.Active{
+  max-height: 800px;
+}
+}
+
+.Container-6{
+  margin-top: 45px;
+}
+.SubContainer6 {
+  display: flex;
+  justify-content: space-around;
+  height: 100vh;
+  margin-top: 20px;
+}
+.C6 {
+  display: flex;
+}
+.C6 img {
+  height: 48px;
+  width: 48px;
+  border: 1px solid white;
+  border-radius: 50%;
+}
+.D6 {
+  display: flex;
+}
+.D6 img {
+  height: 30px;
+  width: 30px;
+  border: 1px solid white;
+  border-radius: 50%;
+}
+.C6 input,textarea{
+  width: 40vw;
+}
+.BTN2 {
+  margin: 10px 300px;
+  padding: 10px;
+  background-color: rgba(0, 183, 255, 0.6);
+  border: none;
+  cursor: pointer;
+  transition: .5s;
+}
+.BTN2 a {
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+}
+.BTN2:hover {
+  background-color: rgba(255, 0, 0, 0.608);
+}
+
+.Container7{
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+.Footer{
+  position: relative;
+  width: 100%;
+  background: black;
+  min-height: 100px;
+  padding: 20px 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.Social-icon,.Menu{
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 0;
+  flex-wrap: wrap;
+}
+.Social-icon li,.Menu li{
+  list-style: none;
+}
+.Social-icon li a{
+  font-size: 2em;
+  color: white;
+  margin: 0 10px;
+  display: inline-block;
+  transition: 0.5s;
+  border-radius: 50%;
+}
+.Social-icon li a:hover{
+  transform: translateY(-10px);
+}
+.Menu li a{
+  font-size: 1em;
+  color: white;
+  margin: 0 10px;
+  display: inline-block;
+  text-decoration: none;
+  opacity: 0.7;
+}
+.Menu li a:hover{
+  opacity: 1;
+}
+footer p{
+  color: white;
+  text-align: center;
+  margin-top: 15px;
+  margin-bottom: 10px;
+  font-size: 1rem;
+}
+footer .Wave{
+position: absolute;
+top: -100px;
+left: 0;
+width: 100%;
+height: 100px;
+background: url(Images/wave3.png);
+background-size: 1000px 100px;
+}
+.Footer .Wave#Wave1{
+  z-index: 1000;
+  opacity: 0.8;
+  bottom: 0;
+  animation: AW 4s linear infinite;
+}
+.Footer .Wave#Wave2{
+  z-index: 999;
+  opacity: 0.5;
+  bottom: 20px;
+  animation: AW2 2s linear infinite;
+}
+.Footer .Wave#Wave3{
+  z-index: 1000;
+  opacity: 0.2;
+  bottom: 30px;
+  animation: AW 3s linear infinite;
+}
+.Footer .Wave#Wave4{
+  z-index: 999;
+  opacity: 0.6;
+  bottom: 40px;
+  animation: AW2 4s linear infinite;
+}
+@keyframes AW{
+  0%{
+    background-position-x: 100px;
+  }
+  100%{
+    background-position-x:0px ;
+  }
+}
+@keyframes AW2{
+  0%{
+    background-position-x: 0px;
+  }
+  100%{
+    background-position-x:100px ;
+  }
 }
 
