--- a/style.css
+++ b/style.css
@@ -1,6 +1,41 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap");
 
+ .Intro {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #161616;
+  transition: 1s;
+} 
+ .Logo-Header {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+}
+.LO {
+  position: relative;
+  display: inline-block;
+  bottom: -20px;
+  opacity: 0;
+  font-size: 40px;
+}
+.LO.active {
+  font-size: 40px;
+  bottom: 0;
+  opacity: 1;
+  transition: ease-in-out 0.5s;
+}
+.LO.Fade {
+  bottom: 150px;
+  opacity: 0;
+  transition: ease-in-out 0.5s;
+} 
 * {
   margin: 0;
   padding: 0;
@@ -10,20 +45,20 @@
 html {
   scroll-behavior: smooth;
 }
-p{
+p {
   color: rgb(0, 0, 0);
 }
 section {
   padding: 20px;
 }
 
-
 .Header {
   display: flex;
   justify-content: space-around;
   align-items: center;
   text-align: center;
-  position: fixed;
+  height: 8vh;
+  /* position: fixed; */
   top: 0;
   left: 0;
   width: 100%;
@@ -40,8 +75,7 @@ section {
 .Nav ul li {
   list-style: none;
   display: inline;
-  margin: 5px;
-  padding: 20px 8;
+  padding: 20px 8px;
 }
 .Nav ul li:hover {
   cursor: pointer;
@@ -49,14 +83,14 @@ section {
 Nav ul li a {
   text-decoration: none;
   color: rgb(45, 45, 45);
+  font-size: 17px;
 }
-Nav ul li a:hover{
-  color: black;
+Nav ul li a:hover {
+  color: rgb(255, 0, 0);
 }
 .Active {
   color: rgb(0, 153, 255);
 }
-
 
 .Container {
   display: flex;
@@ -66,43 +100,41 @@ Nav ul li a:hover{
   margin-top: 125px;
   height: 80vh;
 }
-.Container p{
+.Container p {
   font-size: 16px;
 }
-.H1-MAIN{
-  font-family: 'Space Grotesk', sans-serif;
-font-size: 55px;
+.H1-MAIN {
+  font-family: "Space Grotesk", sans-serif;
+  font-size: 55px;
 }
-.H1-MAIN span{
+.H1-MAIN span {
   color: rgb(255, 81, 0);
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   letter-spacing: 2px;
 }
-.HeadBTN{
+.HeadBTN {
   padding: 10px;
-  background-color: rgba(47, 196, 255, 0.6);
+  background-color: rgb(169, 218, 246);
   border: none;
   cursor: pointer;
-  transition: .5s;
-
+  transition: 0.5s;
 }
-.HeadBTN a{
-text-decoration: none;
-color: white;
+.HeadBTN a {
+  text-decoration: none;
+  color: white;
 }
-.HeadBTN:hover{
-background-color: rgb(255, 105, 105);
-cursor: pointer;
-color: rgb(0, 191, 255);
+.HeadBTN:hover {
+  background-color: rgb(255, 105, 105);
+  cursor: pointer;
 }
-.IMG-BOX{
+.IMG-BOX {
   width: 40%;
   height: 90%;
   position: absolute;
   bottom: 0px;
   right: 10px;
 }
-.IMG-BOX img{
+.IMG-BOX img {
   height: 100%;
   position: absolute;
   left: 50%;
@@ -110,16 +142,16 @@ color: rgb(0, 191, 255);
   transform: translateX(-50%);
   transition: 1s;
 }
-.IMG-BOX .Back-IMG{
+.IMG-BOX .Back-IMG {
   height: 80%;
 }
-.IMG-BOX:hover .Back-IMG{
+.IMG-BOX:hover .Back-IMG {
   bottom: 40px;
 }
-.IMG-BOX:hover .Main-IMG{
+.IMG-BOX:hover .Main-IMG {
   left: 54%;
 }
-.LOGOS{
+.LOGOS {
   margin-top: 100px;
 }
 .LOGO {
@@ -131,7 +163,6 @@ color: rgb(0, 191, 255);
   opacity: 1;
   transform: translateY(-30%);
 }
-
 
 .Container2 {
   margin-top: 62px;
@@ -146,22 +177,25 @@ color: rgb(0, 191, 255);
 }
 .heading2 {
   text-align: center;
-  position: relative; 
+  position: relative;
   color: rgb(236, 71, 6);
 }
 .heading2::after {
   content: "";
   display: block;
-  width: 10%; 
-  height: 3px; 
-  background-color: #000; 
+  width: 10%;
+  height: 3px;
+  background-color: #000;
   position: absolute;
   bottom: 0;
-  left: 45%; 
+  left: 45%;
   font-weight: 900;
-  background-image: linear-gradient(to right,rgb(240, 76, 0),rgb(255, 240, 234) );
+  background-image: linear-gradient(
+    to right,
+    rgb(240, 76, 0),
+    rgb(255, 240, 234)
+  );
 }
-
 
 .main {
   width: 100%;
@@ -177,88 +211,117 @@ color: rgb(0, 191, 255);
   position: relative;
   margin-bottom: 80px;
 }
-.heading::after{
-    position: absolute;
-    content: '';
-    width: 50%;
-    height: 4px;
-    left: 50%;
-    bottom: -5px;
-    background-image: linear-gradient(to right,rgb(240, 76, 0),rgb(255, 240, 234) );
-    transform: translateX(-50%);
+.heading::after {
+  position: absolute;
+  content: "";
+  width: 50%;
+  height: 4px;
+  left: 50%;
+  bottom: -5px;
+  background-image: linear-gradient(
+    to right,
+    rgb(240, 76, 0),
+    rgb(255, 240, 234)
+  );
+  transform: translateX(-50%);
 }
-.container-Edu{
-    width: 70%;
-    height: auto;
-    position: relative;
+/* .container-Edu {
+  width: 70%;
+  height: auto;
+  position: relative;
+} */
+.container-Edu::after {
+  position: absolute;
+  content: "";
+  width: 2px;
+  height: 100%;
+  background-image: linear-gradient(
+    to right,
+    rgb(240, 76, 0),
+    rgb(255, 240, 234)
+  );
 }
-.container-Edu::after{
-    position: absolute;
-    content: '';
-    width: 2px;
-    height: 100%;
-    background-image: linear-gradient(to right,rgb(240, 76, 0),rgb(255, 240, 234) );
+.container-Edu ul {
+  list-style: none;
 }
-.container-Edu ul{
-list-style: none;
+.container-Edu ul li {
+  width: 50%;
+  height: auto;
+  padding: 15px 20px;
+  background-color: #fff;
+  box-shadow: 1px 1px 25px rgba(0, 0, 0, 0.506);
+  border-radius: 10px;
+  margin-bottom: 30px;
+  z-index: 99;
+  position: relative;
 }
-.container-Edu ul li{
-width: 50%;
-height: auto;
-padding: 15px 20px;
-background-color: #fff;
-box-shadow: 1px 1px 25px rgba(0, 0, 0, 0.506);
-border-radius: 10px;
-margin-bottom: 30px;
-z-index: 99;
-position: relative;
+.container-Edu ul li:nth-child(odd) {
+  float: left;
+  clear: right;
+  transform: translateX(-30px);
 }
-.container-Edu ul li:nth-child(odd){
-    float: left;
-    clear: right;
-    transform: translateX(-30px);
+.container-Edu ul li:nth-child(even) {
+  float: right;
+  clear: left;
+  transform: translateX(30px);
 }
-.container-Edu ul li:nth-child(even){
-    float: right;
-    clear: left;
-    transform: translateX(30px);
+.container-Edu ul li:nth-child(4) {
+  margin-bottom: 0;
 }
-.container-Edu ul li:nth-child(4){
-    margin-bottom: 0;
+.container-Edu ul li .title {
+  font-size: 20px;
+  font-weight: 500;
+  color: rgb(236, 71, 6);
 }
-.container-Edu ul li .title{
-    font-size: 20px;
-    font-weight: 500;
-    color: rgb(236, 71, 6);
+ul li p {
+  font-size: 15px;
+  color: #444;
+  margin: 7px 0;
+  line-height: 23px;
 }
-ul li p{
-    font-size: 15px;
-    color: #444;
-    margin: 7px 0;
-    line-height: 23px;
+ul li a {
+  font-size: 15px;
+  color: rgb(236, 71, 6);
+  text-decoration: none;
 }
-ul li a{
-    font-size: 15px;
-    color: rgb(236, 71, 6);
-    text-decoration: none;
+ul li a:hover {
+  color: rgb(0, 140, 255);
 }
-ul li a:hover{
-    color: rgb(0, 140, 255);
-}
-ul li .date{
-    position: absolute;
-    top: -40px;
-    left: 20px;
-    width: 135px;
-    height: 35px;
-    border-radius: 20px;
-    color: #fff;
-    background-image: linear-gradient(to right,rgb(240, 76, 0),rgb(255, 240, 234) );
-    display: grid;
-    place-items: center;
-    font-size: 14px;
+ul li .date {
+  position: absolute;
+  top: -40px;
+  left: 20px;
+  width: 135px;
+  height: 35px;
+  border-radius: 20px;
+  color: #fff;
+  background-image: linear-gradient(
+    to right,
+    rgb(240, 76, 0),
+    rgb(255, 240, 234)
+  );
+  display: grid;
+  place-items: center;
+  font-size: 14px;
 }
 
+.Portfolio-C {
+  width: 100%;
+}
+.P-C {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+}
+.L img {
+height: 60vh;
+width: 575px;
+}
+.R img{
+  height: 60vh;
+  width: 60vw;
+}
 .Container4 {
   margin-top: 62px;
   height: 85vh;
@@ -299,7 +362,11 @@ ul li .date{
   width: 50%;
   height: 100%;
   position: absolute;
-  background-image: linear-gradient(to right,rgb(240, 76, 0),rgb(255, 223, 210) );
+  background-image: linear-gradient(
+    to right,
+    rgb(240, 76, 0),
+    rgb(255, 223, 210)
+  );
   border-radius: 25px;
 }
 
@@ -443,50 +510,50 @@ ul li .date{
   display: inline-block;
   text-align: justify;
 }
-.MP{
+.MP {
   margin-top: 12px;
   margin-bottom: 12px;
 }
-.Accordian{
+.Accordian {
   padding: 16px 16px;
   margin-bottom: 16px;
   border-radius: 4px;
-  box-shadow: 1px 1px 5px rgb(0, 0, 0,0.4);
+  box-shadow: 1px 1px 5px rgb(0, 0, 0, 0.4);
   cursor: pointer;
 }
-.Question{
+.Question {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  color: black
+  color: black;
 }
-.icon{
+.icon {
   margin-right: 10px;
-  transition: transform .5s;
+  transition: transform 0.5s;
 }
-.icon.Active{
-color: orangered;
+.icon.Active {
+  color: orangered;
   transform: rotate(-180deg);
 }
-.Answer{
+.Answer {
   color: gray;
   max-height: 0;
   overflow: hidden;
-  transition: max-height .5s;
+  transition: max-height 0.5s;
 }
-.Answer.Active{
+.Answer.Active {
   max-height: 400px;
 }
-.HA{
-color: rgb(236, 71, 6);
+.HA {
+  color: rgb(236, 71, 6);
 }
-@media(max-width:968px){
-.Answer.Active{
-  max-height: 800px;
-}
+@media (max-width: 968px) {
+  .Answer.Active {
+    max-height: 800px;
+  }
 }
 
-.Container-6{
+.Container-6 {
   margin-top: 45px;
 }
 .SubContainer6 {
@@ -513,7 +580,8 @@ color: rgb(236, 71, 6);
   border: 1px solid white;
   border-radius: 50%;
 }
-.C6 input,textarea{
+.C6 input,
+textarea {
   width: 40vw;
 }
 .BTN2 {
@@ -522,7 +590,7 @@ color: rgb(236, 71, 6);
   background-color: rgba(0, 183, 255, 0.6);
   border: none;
   cursor: pointer;
-  transition: .5s;
+  transition: 0.5s;
 }
 .BTN2 a {
   text-decoration: none;
@@ -532,12 +600,12 @@ color: rgb(236, 71, 6);
   background-color: rgba(255, 0, 0, 0.608);
 }
 
-.Container7{
+.Container7 {
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
 }
-.Footer{
+.Footer {
   position: relative;
   width: 100%;
   background: black;
@@ -548,7 +616,8 @@ color: rgb(236, 71, 6);
   align-items: center;
   flex-direction: column;
 }
-.Social-icon,.Menu{
+.Social-icon,
+.Menu {
   position: relative;
   display: flex;
   justify-content: center;
@@ -556,10 +625,11 @@ color: rgb(236, 71, 6);
   margin: 10px 0;
   flex-wrap: wrap;
 }
-.Social-icon li,.Menu li{
+.Social-icon li,
+.Menu li {
   list-style: none;
 }
-.Social-icon li a{
+.Social-icon li a {
   font-size: 2em;
   color: white;
   margin: 0 10px;
@@ -567,10 +637,10 @@ color: rgb(236, 71, 6);
   transition: 0.5s;
   border-radius: 50%;
 }
-.Social-icon li a:hover{
+.Social-icon li a:hover {
   transform: translateY(-10px);
 }
-.Menu li a{
+.Menu li a {
   font-size: 1em;
   color: white;
   margin: 0 10px;
@@ -578,63 +648,62 @@ color: rgb(236, 71, 6);
   text-decoration: none;
   opacity: 0.7;
 }
-.Menu li a:hover{
+.Menu li a:hover {
   opacity: 1;
 }
-footer p{
+footer p {
   color: white;
   text-align: center;
   margin-top: 15px;
   margin-bottom: 10px;
   font-size: 1rem;
 }
-footer .Wave{
-position: absolute;
-top: -100px;
-left: 0;
-width: 100%;
-height: 100px;
-background: url(Images/wave3.png);
-background-size: 1000px 100px;
+footer .Wave {
+  position: absolute;
+  top: -100px;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background: url(Images/wave3.png);
+  background-size: 1000px 100px;
 }
-.Footer .Wave#Wave1{
+.Footer .Wave#Wave1 {
   z-index: 1000;
   opacity: 0.8;
   bottom: 0;
   animation: AW 4s linear infinite;
 }
-.Footer .Wave#Wave2{
+.Footer .Wave#Wave2 {
   z-index: 999;
   opacity: 0.5;
   bottom: 20px;
   animation: AW2 2s linear infinite;
 }
-.Footer .Wave#Wave3{
+.Footer .Wave#Wave3 {
   z-index: 1000;
   opacity: 0.2;
   bottom: 30px;
   animation: AW 3s linear infinite;
 }
-.Footer .Wave#Wave4{
+.Footer .Wave#Wave4 {
   z-index: 999;
   opacity: 0.6;
   bottom: 40px;
   animation: AW2 4s linear infinite;
 }
-@keyframes AW{
-  0%{
+@keyframes AW {
+  0% {
     background-position-x: 100px;
   }
-  100%{
-    background-position-x:0px ;
-  }
-}
-@keyframes AW2{
-  0%{
+  100% {
     background-position-x: 0px;
   }
-  100%{
-    background-position-x:100px ;
+}
+@keyframes AW2 {
+  0% {
+    background-position-x: 0px;
+  }
+  100% {
+    background-position-x: 100px;
   }
 }
-
