--- a/styles.css
+++ b/styles.css
@@ -136,6 +136,9 @@ ul li a {
   font-size: 10px;
   height: 60vh;
 }
+.DD{
+  display: none;
+}
 .skills_main {
   margin-left: auto;
 }
@@ -199,6 +202,16 @@ display: flex;
 flex-direction: column;
 align-items: center;
 text-align: center;
+}
+ .Logo-Header img{
+margin-left: 0px;
+height:100px;
+}
+.LO {
+  font-size: 16px;
+}
+.LO.active {
+  font-size: 16px;
 }
 }
 @media(max-width:500){
